# whisper

./: .coverage  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  cli.md  codecov.yaml  coverage.xml  index.html  justfile  mkdocs.yaml  playground.ipynb  pyproject.toml
.github/workflows/: build-and-test.yml  build.yml  docs.yml  publish.yml
assets/: asking_a_question.yml  code_related_questions.yml  demo.yml  using_a_different_provider.yml  using_a_different_theme.yml
changelog/: index.html
cli/: index.html
docs/: cli.md  guide.md
docs/assets/: copy_a_snippet.yml  piping_content.yml  using_a_different_model.yml
guide/: index.html
search/: search_index.json
src/whisper/: __init__.py  __main__.py  chains.py  config.py  custom_typer.py  logging.py  mkdocs_typer.py  settings.py
src/whisper/cli/: ask.py  config.py
tests/: test_ask.py  test_config.py  test_logging.py  test_mkdocs_typer.py  test_settings.py  test_themes.py
