[project]
name = "just-whisper"
version = "0.1.5"
description = "Whisper 🤫 sweet nothin's to your favorite LLM."
authors = [
    { name = "Myg0t", email = "myg0tm3dia@gmail.com" }
]
dependencies = [
    "typer>=0.12.5",
    "rich>=13.8.1",
    "langchain>=0.3.1",
    "langchain-core>=0.3.6",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "langchain-openai>=0.2.1",
    "langchain-anthropic>=0.2.1",
    "toml>=0.10.2",
    "langchain-mistralai>=0.2.0",
    "langchain-fireworks>=0.2.0",
    "langchain-mistralai>=0.2.0",
    "langchain-fireworks>=0.2.0",
    "clipboard>=0.0.4",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.optional-dependencies]
openai = ["langchain-openai>=0.2.1"]
anthropic = ["langchain-anthropic>=0.2.1"]
mistral = ["langchain-mistralai>=0.2.0"]
fireworks = ["langchain-fireworks>=0.2.0"]
all = [
    "just-whisper[openai,anthropic,mistral,fireworks]",
]

[project.scripts]
"whisper" = "whisper:app"

[project.entry-points."mkdocs.plugins"]
mkdocs_typer = "whisper.mkdocs_typer:MkdocsTyper"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = [
    "ipython>=8.27.0",
    "ipykernel>=6.29.5",
    "ruff>=0.6.8",
    "pre-commit>=3.8.0",
    "mkdocs>=1.6.1",
    "mkdocstrings>=0.26.1",
    "mkdocs-material>=9.5.39",
    "mkdocs-jupyter>=0.25.0",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "genbadge[all]>=1.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/whisper"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src --cov-fail-under=80"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "test*.py",
]
python_classes = [
    "Test*",
    "test*",
]
python_functions = [
    "test_*",
    "test*",
]
markers = [
    "webtest: mark a test as a webtest.",
    "slow: mark tests as slow (deselect with '-m \"not slow\"').",
]
# filterwarnings = [
#     "error",
#     "ignore::UserWarning",
# ]
